# MotherCare

./: .gitignore  README.md  START.ps1  app.py  check_css.js  debug_css.js  docker-compose.yml  print_css.js  requirements.txt  verify_maxw.js
MotherCare/: CLAUDE.md  (+5 more)
backend/: .env.example  Dockerfile  app.py  manage.py  pyproject.toml  requirements.txt  schema.yml
backend/apps/: __init__.py
backend/apps/admissions/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  services.py  urls.py  urls_beds.py  views.py
backend/apps/appointments/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/audit/: __init__.py  admin.py  apps.py  models.py  urls.py  utils.py
backend/apps/auth_rbac/: __init__.py  admin.py  apps.py  authentication.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/billing/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/consultations/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/delivery/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/documents/: __init__.py  admin.py  apps.py  models.py  urls.py
backend/apps/emergency/: __init__.py  admin.py  apps.py  models.py  urls.py
backend/apps/hospital_config/: __init__.py  admin.py  apps.py  models.py  serializers.py  settings_urls.py  urls.py  views.py
backend/apps/hr/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/laboratory/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  services.py  urls.py  urls_lab.py  views.py
backend/apps/newborn/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/notifications/: __init__.py  admin.py  apps.py  models.py  urls.py
backend/apps/people/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/pharmacy/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/pregnancy/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/core/: constants.py  exceptions.py  managers.py  mixins.py  models.py  pagination.py  permissions.py  utils.py
backend/scratch/: create_doctor_logins.py  create_patient_logins.py  generate_tests.py  list_urls.py  search_keyword.py  seed_modules.py  setup_dev_users.py  setup_pharmacist.py  update_credentials.py
(+217 files in other folders)
