[project]
name = "mothercare"
version = "0.1.0"
description = "MotherCare — Shakuntala Hospital Maternity HIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "django>=4.2,<5.0",
    "djangorestframework>=3.14,<4.0",
    "reportlab>=4.0.0",

    # Database
    "psycopg2-binary>=2.9.9",

    # Authentication & Security
    "argon2-cffi>=21.3.0",        # Argon2id password hashing (AUTH-02)
    "cryptography>=41.0.0",

    # Configuration
    "python-decouple>=3.8",       # env-based settings

    # API
    "django-cors-headers>=4.3.0",
    "drf-spectacular>=0.27.0",    # OpenAPI schema generation

    # File handling
    "pillow>=10.2.0",

    # Utilities
    "django-filter>=23.5",        # DRF filtering
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",

    # Code quality
    "ruff>=0.3.0",

    # Development tools
    "django-debug-toolbar>=4.3.0",
    "ipython>=8.20.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=apps",
    "--cov=core",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
testpaths = ["apps", "core"]

[tool.ruff]
target-version = "py311"
line-length = 119
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints enforced)
    "DJ",  # flake8-django
]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
    "ANN401",  # Dynamically typed expressions (Any) allowed
    "B008",    # Do not perform function calls in default arguments (DRF uses this)
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["ANN", "N802", "N803"]
"*/migrations/*" = ["E501", "ANN", "N806"]
"manage.py" = ["ANN"]
"config/settings/*" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["core", "apps", "config"]
known-third-party = ["django", "rest_framework", "drf_spectacular"]

[tool.coverage.run]
source = ["apps", "core"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/admin.py",
    "*/apps.py",
    "manage.py",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
